# internal/server/server.go
@@ -35,6 +35,8 @@ func New() *gin.Engine {
 		apiGroup.GET("/game/:gameId/state/:userId", api.GameStateHandler)
 		apiGroup.GET("/admin/game/:gameId", api.AdminStateHandler)
 		apiGroup.POST("/user/:id/rename", api.RenameHandler)
+		apiGroup.GET("/user/:id", api.GetUserHandler)
+		apiGroup.GET("/users", api.ListUsersHandler)
 		apiGroup.GET("/version", api.VersionHandler)
 		apiGroup.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	}
